Fix wrong reset URL on statistics/attendeesmissing
PHP8, fix wrong use of mysqli_connect_errno. Handle id=0 in function nom
PHP8, fix wrong use of implode and join functions
Prevent skills to be deleted if used by agents
Workinghours exception should take into account weeks turnover
Mark leaved agents as crossed off when importing models
[BSG] Show non validated planning in personal calendar

*** Version 20.10.00       (2020-10-09)   ***
- Enhancements
Add working hours exceptions
Retrieve absences from microsoft graph API
Add a cron script to purge the log table: planningBibio:PurgeLogTable
Check journey times between site / areas
Having "Full day" checked by default in absences is configurable
Check journey times between absences and jobs
Enable web profiler on dev environment
Symfonisation of admin -> activites
Use Doctrine ORM for skill pages
Use fine tuning of hours in holidays forms
Mass modification of agents
Symfonize agenda/index page
Stick planning times row and job columns
Symfonize and Doctrinize postes/index.php

-Fixes
Use fine tuning of hours in absence forms
Fix the control of plannings when an absence is recorded
Fix removal of reccuring absences
Set default value for start and end hours when saving an absence
Fix admin info and absences info forms
fix retrieving of start hour when adding absence
Prevent duplicating working hours via clone option

*** Version 20.04.00       (2020-06-15)   ***
- Enhancements
Include symfony framework
Move absences pages into a symfony controller
Move absences/info pages into a symfony controller
Move admin/info pages into a symfony controller
Move agents pages into a symfony controller
Move configuration page into a symfony controller
Move help page into a symfony controller
Move holidays pages into a symfony controller
Ability to check permissions on symfony kernel.request event
Add unit tests
Ability to request holiday in days (optionnal)
Ability to request holiday on half day